updated gulp version

--- a/src/styles/abstracts/variables.scss
+++ b/src/styles/abstracts/variables.scss
@@ -24,6 +24,7 @@ $purple-01: #9da5ff;
 $purple-02: #6e80fd;
 $purple-03: #7183ff;
 $purple-04: #818cff;
+$purple-05: #323ec9;
 
 $gray-01: #868788;
 $gray-02: #333535;
